Fixed layout issue with list of questions and list of answers to freetext question

--- a/src/main/webapp/resources/css/arsnova.css
+++ b/src/main/webapp/resources/css/arsnova.css
@@ -14,6 +14,10 @@
 	color: rgba(190,224,247,0.9);
 }
 
+.x-list-inner {
+	padding: 0;
+}
+
 /* remove "Sencha Touch GPL3" watermark from charts */
 .x-chart-watermark {
 	opacity: 0;
